add docker compose to readme